# Minecraft-Architecture-Master-Agent

./: .env.example  .gitignore  AGENT.md  README.md  SUBMISSION.md  package-lock.json  package.json
training/stage7/: README.md  environment.yml  pyproject.toml  requirements.in  test_verify_environment.py  validate_plan.mjs  verify_environment.py
training/stage7/mcagent_stage7/: acceptance.py  checkpoints.py  contracts.py  dataset.py  encoding.py  evaluate.py  evaluate_private_research.py  fixture_assets.py  infer.py  model.py  monitor_private_research.py  pause_private_research.py  private_research.py  private_research_checkpoints.py  private_research_evaluation.py  private_research_model.py  private_research_runtime.py  private_research_snapshots.py  private_research_training.py  resume_private_research.py  semantic_balance.py  status.py  tensors.py  train.py  train_fixture.py  train_private_research.py  training_checkpoint.py  training_data.py  training_loop.py  training_metrics.py  training_paths.py  voxel_model.py
training/stage7/tests/: conftest.py  private_research_test_support.py  test_acceptance.py  test_checkpoints.py  test_dataset.py  test_encoding.py  test_evaluate_private_research.py  test_fixture_assets.py  test_infer.py  test_model.py  test_monitor_private_research.py  test_private_research.py  test_private_research_checkpoints.py  test_private_research_control_cli.py  test_private_research_evaluation.py  test_private_research_model.py  test_private_research_runtime.py  test_private_research_snapshots.py  test_private_research_training_v2.py  (+11 more)
(+541 files in other folders)
