[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcagent-stage7"
version = "0.3.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy==2.5.1",
  "torch==2.13.0+cu130",
]

[tool.setuptools]
packages = ["mcagent_stage7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
